before do some changes in relationship